--- a/style.css
+++ b/style.css
@@ -3,22 +3,21 @@
      align-items: center;
     justify-content: center;
 }
-.contatiner {
-     width: 500px;
-    height: 500px;
-     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-     border: solid;
+.contatiner { 
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+ width: 600px;
+ height: 700px;
 }
-.back {
-   grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 2;
+.contatiner >div {
+    background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
 }
-.cleaner {
-    grid-column-start: 4;
-  grid-column-end: 8;
-  grid-row-start: 1;
-  grid-row-end: 2;
+.span-2 {
+    grid-column: span 2;
 }
