--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
-.calculator{
+.calculator {
     display: flex;
      align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+.screen {
+    border: solid;
+    width: 410px;
 }
 .contatiner { 
   display: grid;
@@ -9,10 +14,10 @@
   gap: 10px;
   background-color: #2196F3;
   padding: 10px;
- width: 600px;
- height: 700px;
+ width: 400px;
+ height: 500px;
 }
-.contatiner >div {
+.contatiner > button {
     background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
   padding: 20px 0;
